Merge pull request #442 from tw-mosip/INJICERT-1214
[INJICERT-1214] Fix issue with encoding of BitStringStatusList